--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
     <h1>Product Detail</h1>
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero magni sed consequatur a assumenda numquam deleniti. Blanditiis qui delectus natus ipsam fugiat sed labore dignissimos, temporibus, fugit eum suscipit atque!</p>
+
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Blanditiis placeat vitae corporis eaque odit ea sequi, expedita libero! Itaque sunt temporibus eligendi corrupti, quibusdam nam esse deserunt laborum ducimus tenetur.</p>
 </body>
 </html>
