--- a/Login.html
+++ b/Login.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Login</h1>
 
-    <p>my name is ali and i live in karachi</p>
+    <p>my name is ali and i live in Rawapindi</p>
 </body>
 </html>
